fix: fix sync to production

--- a/.github/workflows/sync-to-prod.yml
+++ b/.github/workflows/sync-to-prod.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches: ["develop"]
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   pull-request:
     name: Sync to Production
@@ -12,6 +16,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - name: Generate PR body
         id: pr_body
         run: |
@@ -20,11 +25,13 @@ jobs:
           echo "body<<EOF" >> $GITHUB_OUTPUT
           echo "$new_merge_commits $did_env_change" >> $GITHUB_OUTPUT
           echo 'EOF' >> $GITHUB_OUTPUT
+
       - uses: repo-sync/pull-request@v2
         name: pull-request
         with:
           destination_branch: "main"
           github_token: ${{ secrets.GITHUB_TOKEN }}
+
       - uses: kt3k/update-pr-description@v1.0.1
         with:
           pr_title: "Sync to Production"
